@@ -2,12 +2,12 @@ AUTHORS.txt for Tux Paint
 
 Tux Paint - A simple drawing program for children.
 
-Copyright (c) 2004 by Bill Kendrick
+Copyright (c) 2005 by Bill Kendrick
 bill@newbreedsoftware.com
 http://www.newbreedsoftware.com/tuxpaint/
 
 
-June 17, 2002 - December 26, 2004
+June 17, 2002 - January 6, 2005
 
 
 * Design and Coding:
@@ -134,6 +134,9 @@ June 17, 2002 - December 26, 2004
   * French
     Jacques Chion <Jacques.Chion@wanadoo.fr>
     Charles Vidal <vidalc@club-internet.fr>
+
+  * Gaelic
+    Kevin Patrick Scannell <scannell@SLU.EDU>
 
   * Galician
     Leandro Regueiro <unho@gulo.org>
