@@ -9,7 +9,7 @@
                            bill@newbreedsoftware.com
                    http://www.newbreedsoftware.com/tuxpaint/
 
-                                January 3, 2005
+                                January 6, 2005
 
    ---------------------------------------------------------------------------
 
@@ -288,6 +288,8 @@ Windows Users
                |--------------------+------------------+---------|
                |french              |francais          |         |
                |--------------------+------------------+---------|
+               |gaelic              |gaidhlig          |         |
+               |--------------------+------------------+---------|
                |galician            |galego            |         |
                |--------------------+------------------+---------|
                |german              |deutsch           |         |
@@ -549,6 +551,8 @@ Available Languages
        |fi_FI          |Suomi              |Finnish              |
        |---------------+-------------------+---------------------|
        |fr_FR          |Franc,ais          |French               |
+       |---------------+-------------------+---------------------|
+       |ga_IE          |G`aidhlig          |Gaelic               |
        |---------------+-------------------+---------------------|
        |gl_ES          |Galego             |Galician             |
        |---------------+-------------------+---------------------|
