@@ -22,7 +22,7 @@ New Breed Software</p>
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.newbreedsoftware.com/tuxpaint/">http://www.newbreedsoftware.com/tuxpaint/</a></p>
 
-<p>January 3, 2005</p>
+<p>January 6, 2005</p>
 </center>
 
 <hr size=2 noshade>
@@ -413,6 +413,11 @@ New Breed Software</p>
     <tr>
       <td><code>french</code></td>
       <td><code>francais</code></td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td><code>gaelic</code></td>
+      <td><code>gaidhlig</code></td>
       <td>&nbsp;</td>
     </tr>
     <tr>
@@ -872,6 +877,11 @@ New Breed Software</p>
     <td><code>fr_FR</code></td>
     <td>Fran&ccedil;ais</td>
     <td>French</td>
+  </tr>
+  <tr>
+    <td><code>ga_IE</code></td>
+    <td>G&agrave;idhlig</td>
+    <td>Gaelic</td>
   </tr>
   <tr>
     <td><code>gl_ES</code></td>
