@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2004.12.26
-.TH TUXPAINT 1 "26 Dec 2004" "0.9.15" "Tux Paint"
+.\" tuxpaint.1 - 2005.01.06
+.TH TUXPAINT 1 "06 Jan 2005" "0.9.15" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
@@ -551,6 +551,7 @@ Milan Plzik,
 John Popplewell,
 Leandro Regueiro,
 Ilir Rugova,
+Kevin Patrick Scannell,
 Geert Stams,
 Peter Sterba,
 Tarmo Toikkanen,
